test/official_tests/this/this_in_top_level_function.lox
fun foo() {
  this; // error: {"line":2,"message":"Can't use 'this' outside of a class","type":"RuntimeError"}
}
